--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
 
   another_flushbar: 1.12.30
 
+  json_annotation: 4.8.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,9 +59,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: 2.3.5
-  build_runner: 2.4.5
+  build_runner: ^2.4.6
   injectable_generator: 2.1.6
   auto_route_generator: 7.1.1
+  json_serializable: 6.7.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
