--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   flutter_bloc: 8.1.3
   flutter_svg: 2.0.7
   dartz: 0.10.1
-  auto_route: ^7.5.0
+  auto_route: 7.5.0
+  rxdart: 0.27.7
+  kt_dart: 1.1.0
 
 
   firebase_core: 2.14.0
@@ -69,6 +71,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  lint: ^2.1.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -81,10 +84,6 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
   assets:
     - resources/images/logo_image.svg
     - resources/images/clock_and_diaries_image.svg
@@ -115,6 +114,9 @@ flutter:
           weight: 400
         - asset: resources/fonts/Roboto-Medium.ttf
           weight: 500
+    - family: HealthDiaryIcons
+      fonts:
+        - asset: resources/icons/HealthDiaryIcons.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
